Fixed Bug of Overlay not showing up by adding position-fixed to the css file, and the menu of small screen not fulling the screen, by changing the position of the <ul> from absolute to fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -142,3 +142,8 @@ footer {
   background-size: cover;
   background-position: center;
 }
+
+#overLay {
+  position: fixed !important;
+  opacity: 0.3 !important;
+}
